<resources>
    <string name="app_name">BucketDrops</string>
    <string name="str_add_drop">Add a drop</string>
    <string name="main_screen_logo">main_screen_logo</string>
    <string name="what_is_it">What is it?</string>
    <string name="str_add_it">Add It</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="drop_image">drop image</string>
    <string name="background_image">background image</string>
    <string name="close">close</string>
    <string name="add">Add</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="no_item">No item To Display</string>
    <string name="sort_none">None</string>
    <string name="most_time_left">Most Time Left</string>
    <string name="least_time_left">Least Time Left</string>
    <string name="sans_serif_thin">sans-serif-thin</string>
</resources>
