<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/iv_logo_size"
        android:layout_height="@dimen/iv_logo_size"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/iv_logo_margin"
        android:src="@drawable/logo"
        android:contentDescription="@string/main_screen_logo"
        />

    <Button
        android:id="@+id/btn_add"
        android:onClick="addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btn_add_margin"
        android:background="@drawable/bg_btn_add_it"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="@dimen/btn_add_vertical_padding"
        android:paddingLeft="@dimen/btn_add_horizontal_padding"
        android:paddingRight="@dimen/btn_add_horizontal_padding"
        android:paddingTop="@dimen/btn_add_vertical_padding"
        android:text="@string/str_add_drop"
        android:textAllCaps="false"
        android:textColor="@color/btn_add_color"
        android:textSize="@dimen/btn_add_font_size" />
</RelativeLayout>
</ScrollView>