...
            tools:ignore="ContentDescription"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_drop"
            android:background="@drawable/bg_et_drop"
            android:layout_below="@+id/tv_add_it"
            android:hint="@string/what_is_it"
            android:padding="@dimen/et_drop_padding"
            android:inputType="textVisiblePassword"

...
